--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
