--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.11.2",
     "sweetalert2": "^11.7.5"
   },
