--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-preloaders": "^3.0.3",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
