--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-preloaders": "^3.0.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
+    "react-router-hash-link": "^2.4.3",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.5"
   },
