--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
@@ -22,6 +24,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
     "react-router-hash-link": "^2.4.3",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.5"
   },
